--- a/src/components/card/card.component.html
+++ b/src/components/card/card.component.html
@@ -1,3 +1,2 @@
-<section class="card" (click)="click()">
-    
-</section>
+<section class="card" (click)="click()" *ngIf="!imageData.active"></section>
+<section class="card-active" *ngIf="imageData.active"></section>
