--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,3 +19,11 @@
     align-content: center;
     align-items: center;
 }
+.button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+}
