Now is working. I'll be adding animations soon.

--- a/src/components/card/card.component.html
+++ b/src/components/card/card.component.html
@@ -1,2 +1,4 @@
-<section class="card" (click)="click()" *ngIf="!imageData.active">{{ imageData.number }}</section>
-<section class="card-active" *ngIf="imageData.active"></section>
+<section class="card" (click)="click()" *ngIf="!imageData.active"></section>
+<section class="card-active" *ngIf="imageData.active">
+    <img [src]="imageData.url" class="image">
+</section>
