--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,7 +19,7 @@
     align-items: center;
 }
 .button {
-    padding: 10px;
+    padding: 15px 10px;
     border: none;
     border-radius: 5px;
     background-color: red;
