--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <section class="cards">
-    <card 
-        *ngFor="let image of images ; let index = index"
-        (clickCounter)="click($event)"
-        [imageData]="image" [index]="index">
-    </card>
+  <card
+    *ngFor="let image of images; let index = index"
+    (clickCounter)="click($event)"
+    [image]="image"
+    [index]="index"
+  >
+  </card>
 </section>
 <div class="menu">
-    <p>Clicks: {{ totalClicks }}</p>
-    <button (click)="resetGame()" class="button">Reset game</button>
+  <p>Clicks: {{ totalClicks }}</p>
+  <button (click)="resetGame()" class="button">Reset game</button>
 </div>
